# askai

./: LICENSE  README.md  askAI.py  pyproject.toml  requirements.txt
